# nickandsmitha

./: .gitignore  README_static.txt  least_squares.py  read_serial.py  tracking.py
myoslib/: CMakeLists.txt
myoslib/inc/: cli_ledControl.h  cli_systemTimeCommand.h  hal_hci.h  hci_packet.h  os_hci.h  os_logMessageDriver.h
myoslib/src/: cli_ledControl.c  cli_systemTimeCommand.c  hal_hci.c  os_hci.c  os_logMessageDriver.c
p3/: README.md  coords.json  data2.txt  do_it.py  get_training_data.py  graph.py  kalman.py  read_serial.py  read_serial_knn_regr_class.py  read_serial_knn_regression.py  read_serial_knn_regression_1.py  read_serial_redux.py  read_serial_threading_demo.py  readme.txt  rssi_measurements.json  rssi_measurements.txt  save_coords.py  test-plot.py  test.py  test2.py
p3/base/: prj.conf
p3/base/src/: main.c
p3/docs/: tracking.py
p3/mobile/src/: hts.c  main.c
p3/static/: .prj.conf.swp  CMakeLists.txt
p3/static/src/: main.c
p3/static_dongle/: CMakeLists.txt  prj.conf
p3/static_dongle/src/: main.c
p3/static_thingy/: prj.conf
p3/static_thingy/src/: main.c
s/: CMakeLists.txt  prj.conf
s/boards/: .disco.overlay.swp  disco.overlay
s/inc/: scu_common.h  scu_hci.h
s/src/: main.c  scu_hci.c  scu_hcsr04.c  scu_hts221.c  scu_lis3mdl.c  scu_lps22hb.c  scu_lsm6dsl.c  scu_vl53l0x.c
tago/: a.py  b.py  readme.txt
